--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,6 +22,10 @@ email-validator>=2.0.0
 python-dotenv>=1.0.0
 psutil>=5.9.0
 
+# File processing
+pandas>=2.0.0
+openpyxl>=3.1.0
+
 # CORS
 # (included in fastapi)
 
